# robovm-1

./: pom.xml
compiler/: pom.xml
compiler/cacerts/: pom.xml
compiler/cacerts/full/: pom.xml
compiler/cocoatouch/: pom.xml
compiler/codesign/: pom.xml
compiler/codesign/src/main/java/org/robovm/utils/codesign/: CodeSign.java
compiler/compiler/: pom.xml
compiler/compiler/src/main/filtered-resources/: version.properties
compiler/compiler/src/main/java/org/robovm/compiler/: AppCompiler.java  CallbackMethodCompiler.java  ClassCompiler.java  DependencyGraph.java  FunctionBuilder.java  Functions.java  Linker.java  ModuleBuilder.java  Version.java
compiler/compiler/src/main/java/org/robovm/compiler/config/: Builder.java  Cacerts.java  Config.java  Home.java  Lib.java  OS.java  QualifiedFile.java  TreeShakerMode.java
compiler/compiler/src/main/java/org/robovm/compiler/llvm/: Alias.java  ConstantGetelementptr.java  DebugMetadata.java  Function.java  FunctionAttribute.java  Getelementptr.java  Load.java  Module.java  NamedMetadata.java  StringConstant.java  VirtualAlias.java  VirtualAliasRef.java
compiler/compiler/src/main/java/org/robovm/compiler/model/: RoboVMGradleModel.java
compiler/compiler/src/main/java/org/robovm/compiler/plugin/: AbstractCompilerPlugin.java  CompilerPlugin.java  LaunchPlugin.java
compiler/compiler/src/main/resources/: header.ll
compiler/compiler/src/test/java/org/robovm/compiler/: DependencyGraphTest.java  MarshalerLookupTest.java  StructMemberMethodCompilerTest.java  VersionTest.java
compiler/libimobiledevice/: CMakeLists.txt  build.sh  genbindings.sh  pom.xml
compiler/libimobiledevice/patches/: 01-dllmain-conflict.patch
compiler/libimobiledevice/src/main/java/org/robovm/libimobiledevice/: Callbacks.java  NativeLibrary.java  ScreenshotrClient.java  SyslogRelayClient.java
compiler/libimobiledevice/src/main/java/org/robovm/libimobiledevice/binding/: LibIMobileDevice.java  LibIMobileDeviceConstants.java  LibIMobileDeviceJNI.java  ScreenShotrClientRef.java  ScreenShotrClientRefOut.java  ScreenShotrError.java  SyslogRelayClientRef.java  SyslogRelayClientRefOut.java  SyslogRelayError.java
compiler/libimobiledevice/src/main/java/org/robovm/libimobiledevice/sweets/: AppleDevice.java  AppleDeviceCenter.java
compiler/libimobiledevice/src/main/java/org/robovm/libimobiledevice/util/: AppLauncher.java  MobileImageMounter.java  Screenshotr.java  SyslogRelay.java
compiler/libimobiledevice/src/main/native/: libimobiledevice_wrap.c
compiler/libimobiledevice/src/main/resources/org/robovm/libimobiledevice/binding/macosx/x86_64/: librobovm-libimobiledevice.dylib
compiler/libimobiledevice/src/main/swig/: libimobiledevice.i
compiler/libimobiledevice/src/test/java/org/robovm/libimobiledevice/util/: MobileImageMounterTest.java
compiler/llvm/: CMakeLists.txt  build.sh  genbindings.sh  pom.xml
compiler/llvm/patches/: 04-emit-sp-fp-offsets-on-arm.patch  08-clang-fix-api-export.patch  09-speedup-clang-disable-dylibs.patch  10-speedup-llvm-disable-tools-compilation.patch
compiler/llvm/patches.old/: 06-cross-compile-fixes.patch  07-fix-sp-fp-offset-assetr-crash.patch
compiler/llvm/src/main/java/org/robovm/llvm/: Attribute.java  Function.java  Module.java  NativeLibrary.java  ObjectFile.java  PassManager.java  SectionIterator.java  Symbol.java  TargetMachine.java  TargetOptions.java
compiler/llvm/src/main/java/org/robovm/llvm/binding/: AttributeArray.java  AttributeRef.java  AttributeRefOut.java  BasicBlockRef.java  BasicBlockRefArray.java  BuilderRef.java  CallConv.java  CodeModel.java  ContextRef.java  DiagnosticInfoRef.java  InlineAsmDialect.java  LLVM.java  LLVMConstants.java  LLVMJNI.java  MemoryBufferRef.java  MetadataRef.java  ModuleFlagBehavior.java  ModuleFlagEntry.java  ModuleProviderRef.java  ModuleRef.java  NamedMDNodeRef.java  ObjectFileRef.java  Opcode.java  PassManagerBuilderRef.java  PassManagerRef.java  PassRegistryRef.java  RelocMode.java  RelocationIteratorRef.java  SectionIteratorRef.java  SymbolFlags.java  SymbolIteratorRef.java  TargetDataRef.java  TargetLibraryInfoRef.java  TargetMachineRef.java  TargetOptionsRef.java  TargetRef.java  TypeRef.java  TypeRefArray.java  UnnamedAddr.java  UseRef.java  (+3 more)
compiler/llvm/src/main/native/: ClangExtra.cpp  LLVMExtra.cpp  LLVMExtra.h  LLVM_wrap.c
compiler/llvm/src/main/swig/: LLVM.i  LLVMCommon.i
compiler/llvm/src/main/swig/include-stub/: stdint.h
compiler/llvm/src/main/swig/include/llvm/Config/: llvm-config.h
compiler/llvm/src/main/swig/include/llvm/Support/: VCSRevision.h
compiler/llvm/src/test/java/org/robovm/llvm/: ModuleTest.java  ObjectFileTest.java  TargetMachineTest.java
compiler/objc/: pom.xml
compiler/rt/: pom.xml
plugins/debugger/: pom.xml
plugins/debugger/src/main/java/org/robovm/debugger/: Debugger.java
plugins/eclipse/: pom.xml
plugins/eclipse/feature/: feature.xml  pom.xml
plugins/eclipse/ui/: pom.xml
plugins/eclipse/ui/src/org/robovm/eclipse/: RoboVMPlugin.java
plugins/eclipse/ui/src/org/robovm/eclipse/internal/: AbstractLaunchConfigurationDelegate.java  ConsoleLaunchConfigurationDelegate.java  IOSDeviceLaunchConfigurationDelegate.java  IOSSimulatorLaunchConfigurationDelegate.java  RoboVMClasspathContainer.java  RoboVMCocoaTouchClasspathContainer.java
plugins/eclipse/update-site/: pom.xml  site.xml
plugins/gradle/: build.gradle
plugins/ibxcode/: pom.xml
plugins/ibxcode/src/main/java/org/robovm/ibxcode/: IBXcodeProject.java
plugins/idea/: README.md  build.gradle  pom.xml
plugins/idea/src/main/java/org/robovm/idea/: RoboVmPlugin.java
plugins/junit/: pom.xml
plugins/junit/client/: pom.xml
plugins/junit/protocol/: pom.xml
plugins/junit/server/: pom.xml
plugins/maven/: pom.xml
plugins/maven/plugin/: pom.xml
plugins/maven/surefire/: pom.xml
plugins/resolver/: pom.xml
plugins/templates/: pom.xml
plugins/templates/console/: pom.xml
plugins/templates/ios-framework/: pom.xml
plugins/templates/ios-single-view-no-ib/: pom.xml
plugins/templates/templater/: pom.xml
(+89 files in other folders)
